# python-template

./: .gitignore  README.md  pyproject.toml  rename.sh  skills-lock.json
.claude/: settings.json
.claude/hooks/: python-quality-after-edit.py  python-quality-before-stop.py
.codex/: config.toml  hooks.json
.codex/hooks/: python-quality-after-edit.py  python-quality-before-stop.py
